modulo_3/cloud_diversity_aws/aws-devops-example/infrastructure/ec2.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: CloudFormation template for EC2 instance to host the application

Parameters:
  EnvironmentName:
    Description: An environment name that is prefixed to resource names
    Type: String
    Default: devops-example
  LatestAmiId:
    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
  InstanceType:
    Description: WebServer EC2 instance type
    Type: String
    Default: t2.micro
  VPCId:
    Description: The VPC ID
    Type: AWS::EC2::VPC::Id
  PublicSubnetId:
    Description: The Public Subnet ID
    Type: AWS::EC2::Subnet::Id
  EC2InstanceProfileArn:
    Description: ARN of the EC2 Instance Profile
    Type: String

Resources:
  WebServerSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP access to the web server
      VpcId: !Ref VPCId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0 # For SSH access, consider restricting this in production
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-WebServerSecurityGroup'

  WebServerInstance:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: !Ref LatestAmiId
      InstanceType: !Ref InstanceType
      IamInstanceProfile: !GetAtt EC2InstanceProfileArn
      NetworkInterfaces:
        - AssociatePublicIpAddress: true
          DeviceIndex: '0'
          GroupSet:
            - !Ref WebServerSecurityGroup
          SubnetId: !Ref PublicSubnetId
      UserData:
        Fn::Base64:
          !Sub |
            #!/bin/bash -xe
            yum update -y
            yum install -y ruby wget
            cd /home/ec2-user
            wget https://aws-codedeploy-${AWS::Region}.s3.amazonaws.com/latest/install
            chmod +x ./install
            ./install auto
            echo 'Done installing CodeDeploy agent'
      Tags:
        - Key: Name
          Value: !Sub '${EnvironmentName}-WebServer'

Outputs:
  WebServerPublicIp:
    Description: Public IP address of the web server
    Value: !GetAtt WebServerInstance.PublicIp
    Export:
      Name: !Sub '${EnvironmentName}-WebServerPublicIp'
  WebServerInstanceId:
    Description: ID of the web server instance
    Value: !Ref WebServerInstance
    Export:
      Name: !Sub '${EnvironmentName}-WebServerInstanceId'
